função de pesquisa no ícone de lupa na barra de pesquisa

--- a/style.css
+++ b/style.css
@@ -29,11 +29,13 @@ header {
 
 .search-icon {
     left: 10px; 
+    cursor: pointer;
 }
 
 .close-icon {
     right: 10px;
-    display: none;  
+    display: none; 
+    cursor: pointer; 
 }
 
 #pesquisa:not(:placeholder-shown) + .close-icon {
